# website

./: .gitignore  config.toml  cv.tex  cv.typ
.github/workflows/: build.yml
content/: about.md  profile.yaml  skills.md
content/education/: 01-open-university.md  02-c-realtime.md  03-advanced-cpp.md
content/experience/: 01-razorsecure.md  02-helitune.md
content/projects/: 01-sailboat-simulator.md  02-homebox-addon.md  02-nrf52-hal.md  03-mdbook-combiner.md  03-shell-config.md  04-jjui-plugin-manager.md
cv/cv/: education.tex  experience.tex  extracurricular.tex  honors.tex  skills.tex
jscarrott/: Cargo.toml  index.html
jscarrott/src/: content.rs  generated_content.rs  main.rs
scripts/: check-cv-sync.sh
templates/partials/: introduction.html
tools/cvgen/: Cargo.toml
tools/cvgen/src/: main.rs
